--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dev = [
     "typos>=1.29.9",
 ]
 example = [
+    "fastabx>=0.1.2",
     "pyyaml>=6.0.2",
     "torchaudio>=2.6.0",
     "tqdm>=4.67.1",
